@@ -1,6 +1,7 @@
 2002-08-15  Jan Nieuwenhuizen  <janneke@gnu.org>
 
-	* cygwin/GNUmakefile: [CYGWIN] Install bug-lilypond-cygwin.
+	* cygwin/GNUmakefile: [CYGWIN] Install bug-lilypond-cygwin.  Typo
+	fix.  Add kpsewhich commands (Thanks Mats).
 
 	* cygwin/bug-lilypond-cygwin.sh: New file.
 
